# example-bazel-python-rust

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  cargo.bazel.lock.json  rust-project.json
fancy_app/: BUILD.bazel  app.py
number_cruncher/: BUILD.bazel  Cargo.toml  fib.py  fib_faster.rs  fib_native.pyi  fib_native.rs
