load("@crate_index//:defs.bzl", "all_crate_deps")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@rules_rust//rust:defs.bzl", "rust_shared_library")

rust_shared_library(
    name = "fib_native_rs",
    srcs = ["fib_native.rs"],
    visibility = ["//visibility:private"],
    deps = all_crate_deps(
        normal = True,
        proc_macro = True,
    ),
)

copy_file(
    name = "fib_native_so",
    src = ":fib_native_rs",
    out = "fib_native.so",
)

py_library(
    name = "number_cruncher",
    srcs = ["fib.py"],
    data = [
        "fib_native.pyi",
        "fib_native_so",
        "py.typed",
    ],
    visibility = ["//visibility:public"],
)
